@@ -140,4 +140,6 @@
 
 /((?+1)(\1))/
 
+"(?1)(?#?'){2}(a)"
+
 # End of testinput8
